+Persistent Login Feature und Offline Modus
Eine CheckBox hinzugefügt durch die wenn sie checked ist die Logindaten
gespeichert werden und nicht bei jedem App Start neu eingegeben werden
müssen.
Ein Button auf dem Login Screen hinzugefügt um die App im Offline Modus
zu betreten.
Einen kleinen Fehler in der Registrierung behoben.

--- a/AndroidApp/res/values/strings.xml
+++ b/AndroidApp/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="rateroute_rating">Bewertung:</string>
     <string name="rateroute_climbed">wie geklettert:</string>
     <string name="rateroute_categorie">Kategorie:</string>
+    <string name="loginCheckBox">Logindaten speichern</string>
+    <string name="loginOfflineMode">Offline Modus</string>
 
 </resources>
