Routen/User-Details, Rating, WebAPI Changes
Ratings werden nun direkt richtig angezeigt beim zurückgehen auf die
RoutenDetails Seite.
Ratings sind nurnoch einmalig möglich pro Route. Sobald Route bewertet
wurde wird der Bewertungs Button ausgeblendet und die eigne Bewertung
eingeblendet.
UserDetails werden nun korrekt errechnet und angezeigt.
SyncDB Methode wurde erweitert. Sodass nun auch die Ratings die zu dem
eingeloggten Benutzer gehören Synchronisiert werden.
getRating wurde zur WebAPI hinzugefügt um alle Ratings die zu einer
userId gehören geholt werden.
ToDo: Offline Rating möglichkeit.

--- a/AndroidApp/res/values/strings.xml
+++ b/AndroidApp/res/values/strings.xml
@@ -32,6 +32,9 @@
     <string name="routedetails_creationdate">Erstelldatum:</string>
     <string name="routedetails_avaragerating">Schwierigkeitsgrad:</string>
     <string name="routedetails_avaragecategorie">Kategorie:</string>
+    <string name="routedetails_ownRating">Eigene Bewertung:</string>
+    <string name="routedetails_ownCategorie">Eigene Categorie:</string>
+    <string name="routedetails_ownHowClimbed">wie geklettert:</string>
     <string name="rateroute_button">Route bewerten</string>
     <string name="rateroute_rating">Bewertung:</string>
     <string name="rateroute_climbed">wie geklettert:</string>
