+Grifffarbe Images, Projekt(howClimbed), isOnline
Projekt als weiteren Punkt im Rating hinzufügen.
Flash/Rotpunkt/Projekt/nicht geklettert prozentual anzeigen anstatt
feste Zahlen.
Benutzernamen des Logins für den Offlinemodus verwenden.
Farbsymbol in der Routenliste hinzufügen und statt Routen Id die
"boltrow" verwenden.
isOnline() funktion hinzugefügt um zu überprüfen ob eine
Internetverbindung besteht.

--- a/AndroidApp/res/values/strings.xml
+++ b/AndroidApp/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="cancel_button">Abbrechen</string>
     <string name="flashcount">Flash:</string>
     <string name="rotpunktcount">Rotpunkt:</string>
+    <string name="projectcount">Projekt:</string>
     <string name="notclimbedcount">Nicht geklettert:</string>
      
     <string name="login_title">Login</string>
