+QR Code Scanner, Passwort reset
QR Code Scanner in das App Menu eingebunden.
Button auf Login Screen hinzugefügt für Passwort vergessen.
recoverPassword Methode in der API hinzugefügt die ein neues Random
Passwort erzeugt und es per Mail an den Nutzer schickt. ToDo: Funktion
zum Passwort ändern in die App einbauen.
Offline Mode Button auf dem Login Screen entfernt und mit einem Dialog
ersetzt der sich beim Login öffnet wenn keine Internetverbindung
besteht.

--- a/AndroidApp/res/values/strings.xml
+++ b/AndroidApp/res/values/strings.xml
@@ -42,5 +42,7 @@
     <string name="rateroute_categorie">Kategorie:</string>
     <string name="loginCheckBox">Logindaten speichern</string>
     <string name="loginOfflineMode">Offline Modus</string>
+    <string name="menuQRCode">QR Code Scanner</string>
+    <string name="recoverPassword_button">Passwort vergessen?</string>
 
 </resources>
