Routen Notification, FarbIcons, DB Sync Timestamp
Eine Notification Funktion hinzugefügt die aufgerufen wird sobald eine
neue Route bei der Syncrhonisation entdeckt wurde.
Fabicons überarbeitet und schwarze Umrandung hinzugefügt.
Timestamp eingebaut so dass DB Sync nurnoch alle 6 Stunden automatisch
beim start aufgerufen wird und nicht bei jedem start der App.
Bugs behoben:
utf8 Fehler bei Json encode behoben durch den Farben mit Umlauten als
null übergeben wurden.
Absturz nach zurückgehen aus der QR Scanner App behoben.
Einige weitere kleine Fehler beseitigt.

--- a/AndroidApp/res/values/strings.xml
+++ b/AndroidApp/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="menuRouteFilter">Routen Filter</string>
     <string name="menuOldestRoutefilter">10 Ältesten Routen</string>
     <string name="menuNewestRoutefilter">10 Neusten Routen</string>
+    <string name="mDbSync">DB Sync</string>
 
 </resources>
