WebAdmin hinzugefügt, DBSync mit Timestamp
WebAdmin Page erstellt.
Timestamp zur DBSync hinzugefügt sodass er nichtmehr alle Routen bei
jeder Synchro updaten muss.
Routenbewertung ändern hinzufügen.
Schwierigkeitsgrad preSelect in der Android App hinzugefügt.
Passwort ändern im Menü der App hinzufügt.
Kategorie leer hinzufügen bei Routen bewerten.

--- a/AndroidApp/res/values/strings.xml
+++ b/AndroidApp/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">DAV Routenbewerter</string>
+    <string name="api_url">http://80.82.209.90/~web1/AndroidWebAPI/index.php</string>
     <string name="action_settings">Einstellungen</string>
     <string name="accept_button">Bestätigen</string>
     <string name="cancel_button">Abbrechen</string>
@@ -50,5 +51,6 @@
     <string name="menuOldestRoutefilter">10 ältesten Routen</string>
     <string name="menuNewestRoutefilter">10 neusten Routen</string>
     <string name="mDbSync">DB Sync</string>
+    <string name="passwordChange">Passwort ändern</string>
 
 </resources>
